--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 @charset "utf-8";
 @import url("fontawesome-free/css/all.css");
-@import url("normalize.css");
+@import url("/css/bootstrap/bootstrap.css");
 @import url("font-family/font.css");
 
 *{
